feat: return template personal board data