@@ -12,6 +12,7 @@ import com.sdkanban.project.entity.Project;
 import com.sdkanban.project.repository.ProjectPersistenceAvailableCondition;
 import com.sdkanban.project.repository.ProjectRepository;
 import com.sdkanban.project.service.ProjectService;
+import com.sdkanban.settings.repository.BoardColumnTemplateRepository;
 import com.sdkanban.task.entity.Task;
 import com.sdkanban.task.repository.TaskChecklistItemRepository;
 import com.sdkanban.task.repository.TaskRepository;
@@ -23,7 +24,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.StringUtils;
 
-import java.util.Comparator;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Locale;
@@ -35,12 +35,12 @@ import java.util.stream.Collectors;
 @Service
 @Conditional(ProjectPersistenceAvailableCondition.class)
 public class BoardServiceImpl implements BoardService {
-    private static final String GROUP_BY_COLUMN = "column";
-    private static final String GROUP_BY_PROJECT = "project";
+    private static final String GROUP_BY_TEMPLATE = "template";
 
     private final ProjectService projectService;
     private final ProjectRepository projectRepository;
     private final BoardColumnRepository boardColumnRepository;
+    private final BoardColumnTemplateRepository boardColumnTemplateRepository;
     private final TaskRepository taskRepository;
     private final TaskChecklistItemRepository taskChecklistItemRepository;
     private final UserRepository userRepository;
@@ -49,6 +49,7 @@ public class BoardServiceImpl implements BoardService {
         ProjectService projectService,
         ProjectRepository projectRepository,
         BoardColumnRepository boardColumnRepository,
+        BoardColumnTemplateRepository boardColumnTemplateRepository,
         TaskRepository taskRepository,
         TaskChecklistItemRepository taskChecklistItemRepository,
         UserRepository userRepository
@@ -56,6 +57,7 @@ public class BoardServiceImpl implements BoardService {
         this.projectService = projectService;
         this.projectRepository = projectRepository;
         this.boardColumnRepository = boardColumnRepository;
+        this.boardColumnTemplateRepository = boardColumnTemplateRepository;
         this.taskRepository = taskRepository;
         this.taskChecklistItemRepository = taskChecklistItemRepository;
         this.userRepository = userRepository;
@@ -81,6 +83,7 @@ public class BoardServiceImpl implements BoardService {
             normalize(priority),
             keyword(keyword)
         );
+        List<BoardColumn> boardColumns = boardColumnRepository.findByProjectIdOrderBySortOrderAscIdAsc(projectId);
         Map<Long, List<Task>> tasksByColumn = tasks.stream()
             .collect(Collectors.groupingBy(
                 Task::getColumnId,
@@ -89,9 +92,10 @@ public class BoardServiceImpl implements BoardService {
             ));
         CardContext cardContext = cardContext(tasks);
 
-        List<BoardColumnTasks> columns = boardColumnRepository.findByProjectIdOrderBySortOrderAscIdAsc(projectId).stream()
+        List<BoardColumnTasks> columns = boardColumns.stream()
             .map(column -> new BoardColumnTasks(
                 column.getId(),
+                column.getTemplateKey(),
                 column.getName(),
                 column.getColor(),
                 column.getSortOrder(),
@@ -105,48 +109,29 @@ public class BoardServiceImpl implements BoardService {
     @Override
     @Transactional(readOnly = true)
     public MyTaskBoardResponse myTaskBoard(String groupBy, Long currentUserId) {
-        String normalizedGroupBy = GROUP_BY_COLUMN.equalsIgnoreCase(String.valueOf(groupBy))
-            ? GROUP_BY_COLUMN
-            : GROUP_BY_PROJECT;
         List<Task> tasks = taskRepository.findByAssigneeIdAndDeletedFalseAndArchivedFalseOrderByProjectIdAscColumnIdAscSortOrderAscIdAsc(currentUserId);
         CardContext cardContext = cardContext(tasks);
-        if (GROUP_BY_COLUMN.equals(normalizedGroupBy)) {
-            return new MyTaskBoardResponse(normalizedGroupBy, groupByColumn(tasks, cardContext));
-        }
-        return new MyTaskBoardResponse(normalizedGroupBy, groupByProject(tasks, cardContext));
+        return new MyTaskBoardResponse(GROUP_BY_TEMPLATE, groupByTemplate(tasks, cardContext));
     }
 
-    private List<MyTaskBoardGroup> groupByProject(List<Task> tasks, CardContext cardContext) {
-        Map<Long, Project> projectsById = projectRepository.findAllById(tasks.stream().map(Task::getProjectId).toList())
-            .stream()
-            .collect(Collectors.toMap(Project::getId, Function.identity()));
+    private List<MyTaskBoardGroup> groupByTemplate(List<Task> tasks, CardContext cardContext) {
+        Map<String, List<Task>> tasksByTemplate = tasks.stream()
+            .filter(task -> cardContext.columnsById().containsKey(task.getColumnId()))
+            .collect(Collectors.groupingBy(
+                task -> cardContext.columnsById().get(task.getColumnId()).getTemplateKey(),
+                LinkedHashMap::new,
+                Collectors.toList()
+            ));
 
-        return tasks.stream()
-            .collect(Collectors.groupingBy(Task::getProjectId, LinkedHashMap::new, Collectors.toList()))
-            .entrySet()
+        return boardColumnTemplateRepository.findByOrderBySortOrderAscIdAsc()
             .stream()
-            .map(entry -> new MyTaskBoardGroup(
-                entry.getKey(),
-                projectsById.get(entry.getKey()).getName(),
-                cards(entry.getValue(), cardContext)
-            ))
-            .toList();
-    }
-
-    private List<MyTaskBoardGroup> groupByColumn(List<Task> tasks, CardContext cardContext) {
-        Map<Long, BoardColumn> columnsById = boardColumnRepository.findAllById(tasks.stream().map(Task::getColumnId).toList())
-            .stream()
-            .collect(Collectors.toMap(BoardColumn::getId, Function.identity()));
-
-        return tasks.stream()
-            .collect(Collectors.groupingBy(Task::getColumnId, LinkedHashMap::new, Collectors.toList()))
-            .entrySet()
-            .stream()
-            .sorted(Comparator.comparing(entry -> columnsById.get(entry.getKey()).getSortOrder()))
-            .map(entry -> new MyTaskBoardGroup(
-                entry.getKey(),
-                columnsById.get(entry.getKey()).getName(),
-                cards(entry.getValue(), cardContext)
+            .map(template -> new MyTaskBoardGroup(
+                template.getTemplateKey(),
+                template.getDisplayName(),
+                template.getColor(),
+                template.getSortOrder(),
+                template.isDone(),
+                cards(tasksByTemplate.getOrDefault(template.getTemplateKey(), List.of()), cardContext)
             ))
             .toList();
     }
@@ -158,12 +143,24 @@ public class BoardServiceImpl implements BoardService {
                 .toList())
             .stream()
             .collect(Collectors.toMap(User::getId, UserSummary::from));
+        Map<Long, Project> projectsById = projectRepository.findAllById(tasks.stream()
+                .map(Task::getProjectId)
+                .distinct()
+                .toList())
+            .stream()
+            .collect(Collectors.toMap(Project::getId, Function.identity()));
+        Map<Long, BoardColumn> columnsById = boardColumnRepository.findAllById(tasks.stream()
+                .map(Task::getColumnId)
+                .distinct()
+                .toList())
+            .stream()
+            .collect(Collectors.toMap(BoardColumn::getId, Function.identity()));
         Map<Long, TaskChecklistItemRepository.ChecklistCountView> checklistCounts = tasks.isEmpty()
             ? Map.of()
             : taskChecklistItemRepository.countByTaskIds(tasks.stream().map(Task::getId).toList())
                 .stream()
                 .collect(Collectors.toMap(TaskChecklistItemRepository.ChecklistCountView::getTaskId, Function.identity()));
-        return new CardContext(usersById, checklistCounts);
+        return new CardContext(usersById, projectsById, columnsById, checklistCounts);
     }
 
     private List<TaskCardResponse> cards(List<Task> tasks, CardContext cardContext) {
@@ -172,7 +169,14 @@ public class BoardServiceImpl implements BoardService {
                 TaskChecklistItemRepository.ChecklistCountView count = cardContext.checklistCounts().get(task.getId());
                 long doneCount = count == null ? 0 : count.getDoneCount();
                 long totalCount = count == null ? 0 : count.getTotalCount();
-                return TaskCardResponse.from(task, cardContext.usersById().get(task.getAssigneeId()), doneCount, totalCount);
+                return TaskCardResponse.from(
+                    task,
+                    cardContext.projectsById().get(task.getProjectId()),
+                    cardContext.columnsById().get(task.getColumnId()),
+                    cardContext.usersById().get(task.getAssigneeId()),
+                    doneCount,
+                    totalCount
+                );
             })
             .toList();
     }
@@ -193,6 +197,8 @@ public class BoardServiceImpl implements BoardService {
 
     private record CardContext(
         Map<Long, UserSummary> usersById,
+        Map<Long, Project> projectsById,
+        Map<Long, BoardColumn> columnsById,
         Map<Long, TaskChecklistItemRepository.ChecklistCountView> checklistCounts
     ) {
     }
